# GodotPerformanceTest

./: README.md
SDL/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
SDL/include/: game.hpp  pch.hpp  utils.hpp  vector.hpp
SDL/src/: game.cpp  main.cpp
bevyecs/: Cargo.toml
bevyecs/src/: ecs.rs  lib.rs  rsnode.rs
gdrs_project/: Global.gd  bevyecs.gd  export_presets.cfg  gdrust.gd  icon.svg.import  main.gd  main.tscn  project.godot  rust.gdextension
project/: camera_3d.tscn  export_presets.cfg  icon.svg.import  project.gdextension  project.godot
project/test/: Global.gd  SelectTest.gd  SelectTest.tscn  gd_test.gd  gd_test.tscn  gdext_test.tscn
project/test/ecsscene/: base_test.gd
project/test/multiMeshTest/: base_test.gd  flecs.gd  gdext_test.gd
project/test/spriteScene/: MultiMesh2D.gd  MultiMesh2D.tscn  MultiMesh2DExtention.gd  gd_test.gd  gd_test.tscn  gdext_test.tscn  gdextnode.tscn  gdnodetest.gd  gdnodetest.tscn
project/test/subScene/: gdnodetest.tscn
src/: SConstruct  config.py  demo.cpp  demo.h  flecs_module.cpp  flecs_module.h  flecs_render.cpp  flecs_render.h  flecs_world.cpp  flecs_world.h  multiMesh2d.cpp  multiMesh2d.h  multi_mesh.cpp  multi_mesh.h  register_types.cpp  register_types.h
